[tool.poetry]
name = "foocat"
version = "0.1.0"
description = ""
authors = ["Shiying Wang <fsywang@alumni.ubc.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.25"

[tool.poetry.dev-dependencies]
sphinx = "^2.4"
sphinxcontrib-napoleon = "^0.7.0"
pytest = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
